fix: author slider spacing issue fixed, logo added, image block left and right issue fixed, color contrast changes

--- a/packages/beauty-portal-theme/src/components/Navigation/styles.scss
+++ b/packages/beauty-portal-theme/src/components/Navigation/styles.scss
@@ -184,8 +184,8 @@
     }
 
     svg {
-      width: 0.75rem;
-      height: 0.75rem;
+      width: 1rem;
+      height: 0.85rem;
       fill: white;
       display: block;
     }
@@ -215,7 +215,7 @@
       padding: 0;
 
       @media (min-width: 768px) {
-        padding-top: 10px;
+        padding-top: 12px;
         padding-bottom: 10px;
         border-top: 4px solid var(--primary-color, #ff5c85);
       }
