--- a/packages/beauty-portal-theme/src/components/SanityTextBlock/styles.scss
+++ b/packages/beauty-portal-theme/src/components/SanityTextBlock/styles.scss
@@ -113,7 +113,7 @@
     }
   }
   &.typeb {
-    background-color: #fff;
+    background-color: #ffe2e2;
 
     svg {
       fill: #000;
